@@ -1,3 +1,3 @@
-EBUILD cldg-meta-11.9-r1.ebuild 1384 RMD160 579422a1cfc3622deb85eab42bb33fcc14f50dfc SHA1 3346f0579b9bfff11af7e4cd00c5f876f35a2425 SHA256 584701bb6bcb11c05985d7d4988a5e76c3fb42e2eb507994d063d3c451326ed8
-MISC ChangeLog 3631 RMD160 0bb32a172a21fc9bfa418ce8bd5309778ee28461 SHA1 a8399b92af446c02802d96bef727da0e63454b5d SHA256 32e38b622108048b59130151b23ab67119f4611d3c9e8645708c623d7d83e7b8
+EBUILD cldg-meta-11.9-r2.ebuild 1282 RMD160 f8cb063edaa57726054b3f4d723327f8d18c48d0 SHA1 db8ff1189fcc0d0fce2bca5519cd10a067ad4790 SHA256 61f3b4be8520f164aee6ffde098abdff01073a4a0ba77b5db6cd2abe23433206
+MISC ChangeLog 3784 RMD160 173b19aa5175d8cd86d69a19d14ff28912e1237b SHA1 b0ecf5b928c80620c99bab9ee73ddf5bc94a5b72 SHA256 8071533196146136ed2402d94f7889578f4b9404adf7f8cde448d046bd7cb367
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
