@@ -1,3 +1,3 @@
-EBUILD cldx-meta-11.9-r1.ebuild 1443 RMD160 50c261f32c4276923ec5743731be15364918b01a SHA1 979283f50abdb20a7cb4ecb2a826b560de5b4b52 SHA256 27138465d95dd36ba12ab6663664ad4f4dfd54ec3c9e737a0e31ec6c1384ed93
-MISC ChangeLog 4524 RMD160 581386d077ade1b9000b76abb6486d57f9e437de SHA1 ab1d3d92a0312d3208b6909d8faf10e07ab2fa67 SHA256 3f9699d24e8a01c564fab28110d08738f1b8d3d98bad5275050dd4647c59f006
+EBUILD cldx-meta-11.9-r2.ebuild 1368 RMD160 305f6166be0135067561f9018e01ac30ee885e43 SHA1 bf8e472a25eec41a0c68019854f89be8577105ae SHA256 5db3d747e9be49165db0a7ebcd1d9563d0e399397c0005a02b2802b727a5b2c6
+MISC ChangeLog 4711 RMD160 56b6f6a044649097a6ac356e2fc21943978e44cc SHA1 c8ba70191d4f4d55530d4887b7de15fbc4481b32 SHA256 1c38e01a9c9353d1311a65071a13707a5804285a579c5be2c4fb7eade7b4db5a
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
