@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cldg-meta-11.9-r1.ebuild, +cldg-meta-11.9-r2.ebuild:
+  remove media-libs/libpng:1.4
+
 *cldg-meta-11.9-r1 (03 Nov 2011)
 
   03 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
